remove unused codes

--- a/stackapp/templates/stackapp/index.html
+++ b/stackapp/templates/stackapp/index.html
@@ -46,7 +46,7 @@
                     {% for j in i.tags %}
                     <span class="card-title badge bg-primary">{{j}}</span>
                     {% endfor %}
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text"></p>
                     <a href="{{i.link}}" target="_blank" class="btn btn-primary"
                         style="background-color:black ;">Question Link</a>
                 </div>
